...
                            .font(/*@START_MENU_TOKEN@*/.title/*@END_MENU_TOKEN@*/)
                    }
                    Divider()
                    
                    // Link to get to the "Settings" Page
                    NavigationLink(destination: settingsView()) {
                        Image(systemName: "gearshape.2").foregroundColor(.black)
                            .font(/*@START_MENU_TOKEN@*/.title/*@END_MENU_TOKEN@*/)
                    }
                }
            }// End of ToolbarItemGroup
        } // End of toolbar
    }
...
